--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,23 @@
   }
 }
 
+@font-face {
+  font-family: "Articulat";
+  src: url("/assets/fonts/ArticulatCF-Medium.otf");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Articulat";
+  src: url("/assets/fonts/ArticulatCF-Normal.otf");
+  font-weight: 500;
+}
+
 body {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Articulat", Arial, Helvetica, sans-serif;
 }
