--- a/app/globals.css
+++ b/app/globals.css
@@ -2,35 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  @font-face {
+    font-family: "Articulat";
+    src: url("/assets/fonts/ArticulatCF-Medium.otf");
+    font-weight: 600;
   }
-}
 
-@font-face {
-  font-family: "Articulat";
-  src: url("/assets/fonts/ArticulatCF-Medium.otf");
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: "Articulat";
-  src: url("/assets/fonts/ArticulatCF-Normal.otf");
-  font-weight: 500;
+  @font-face {
+    font-family: "Articulat";
+    src: url("/assets/fonts/ArticulatCF-Normal.otf");
+    font-weight: 500;
+  }
 }
 
 body {
   font-size: 16px;
   font-weight: 500;
   line-height: 100%;
-  color: var(--foreground);
-  background: var(--background);
   font-family: "Articulat", Arial, Helvetica, sans-serif;
 }
